@@ -1,5 +1,6 @@
 0.7.0
 - adds PryRemoteEm.servers and PryRemoteEm.stop_server
+- broker can proxy requests to local or remote servers that have registered with it
 - all servers will attempt to register with a broker; client will retrieve list of servers from the broker and present a menu to the user by default
 - when specifying a specific port to listen on the option :port_fail can be set to :auto; if binding fails attempt to bind on the next port 
 - server.run returns a url (String) with the scheme, host and port of the listening server
